working light and dark mode need to work on bugs

--- a/src/components/PlateCalculator.css
+++ b/src/components/PlateCalculator.css
@@ -36,7 +36,7 @@ div {
   padding: 10px;
 }
 
-.lightMode {
+.light-mode {
   background-color: white;
   color: black;
 }
